force-app/main/default/objects/Radar__c/Radar__c.object-meta.xml
<CustomObject>
    <label>Radar</label>
    <nameField>
        <displayFormat>Radar-{000000}</displayFormat>
        <label>Radar</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Radar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>