force-app/main/default/objects/Radar__c/fields/Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Course_Level__c</fullName>
    <label>Course Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>