force-app/main/default/objects/Radar__c/fields/Existing_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Existing_Expertise__c</fullName>
    <label>Existing Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alloclassic</fullName>
            </value>
            <value>
                <fullName>Allofit</fullName>
            </value>
            <value>
                <fullName>Anatomical Fracture Shoulder</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder Combined</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder Inverse/Reverse</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder Standard</fullName>
            </value>
            <value>
                <fullName>Australian National Joint Registry</fullName>
            </value>
            <value>
                <fullName>Avenir</fullName>
            </value>
            <value>
                <fullName>Avn</fullName>
            </value>
            <value>
                <fullName>Bearing Science</fullName>
            </value>
            <value>
                <fullName>Bf Shoulder - Hemi Arthroplasty</fullName>
            </value>
            <value>
                <fullName>Bf Shoulder - Total Arthroplasty</fullName>
            </value>
            <value>
                <fullName>Biolox Delta Ceramic</fullName>
            </value>
            <value>
                <fullName>Bone Substitutes</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Cervical Anterior Plates</fullName>
            </value>
            <value>
                <fullName>Cervical Corpectomy Cages</fullName>
            </value>
            <value>
                <fullName>Cervical Peek Cages</fullName>
            </value>
            <value>
                <fullName>Cervical Puros Cages</fullName>
            </value>
            <value>
                <fullName>Cervical Tm Cages</fullName>
            </value>
            <value>
                <fullName>Cls</fullName>
            </value>
            <value>
                <fullName>Cm Elbow</fullName>
            </value>
            <value>
                <fullName>Cpt 12/14</fullName>
            </value>
            <value>
                <fullName>Cr</fullName>
            </value>
            <value>
                <fullName>Ddh</fullName>
            </value>
            <value>
                <fullName>Fitmore Stem</fullName>
            </value>
            <value>
                <fullName>Fixed Bearing</fullName>
            </value>
            <value>
                <fullName>Gsb Elbow</fullName>
            </value>
            <value>
                <fullName>Herbert Screws</fullName>
            </value>
            <value>
                <fullName>Iassist Hip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>