force-app/main/default/objects/Radar__c/fields/Goal_Technique__c.field-meta.xml
<CustomField>
    <fullName>Goal_Technique__c</fullName>
    <label>Goal Technique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alif</fullName>
            </value>
            <value>
                <fullName>All Lower Limb</fullName>
            </value>
            <value>
                <fullName>All Upper Limb</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Anterior Approach</fullName>
            </value>
            <value>
                <fullName>Anterior Supine Approach</fullName>
            </value>
            <value>
                <fullName>Anterolateral Approach</fullName>
            </value>
            <value>
                <fullName>Anterolateral-Supine (Al-S) Approach</fullName>
            </value>
            <value>
                <fullName>Antero-Medial Approach</fullName>
            </value>
            <value>
                <fullName>Antero-Superior Approach</fullName>
            </value>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Bearing Surfaces</fullName>
            </value>
            <value>
                <fullName>Cmf</fullName>
            </value>
            <value>
                <fullName>Delto-Pectoral Approach</fullName>
            </value>
            <value>
                <fullName>Difficult Primaries Technique</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Femur</fullName>
            </value>
            <value>
                <fullName>Femur Af</fullName>
            </value>
            <value>
                <fullName>Femur Rf</fullName>
            </value>
            <value>
                <fullName>Fixation Technology</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Intelligent Instrumentation</fullName>
            </value>
            <value>
                <fullName>Knee Kinematic</fullName>
            </value>
            <value>
                <fullName>Lateral Approach</fullName>
            </value>
            <value>
                <fullName>Lateral To Medial Triceps/Anconeal Flap</fullName>
            </value>
            <value>
                <fullName>Lateral Transfibular Approach</fullName>
            </value>
            <value>
                <fullName>Medial To Lateral Triceps/Anconeal Flap</fullName>
            </value>
            <value>
                <fullName>Mid Vastus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>