force-app/main/default/objects/Radar__c/fields/Surgeon_Positions__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Positions__c</fullName>
    <label>Surgeon Positions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Paramedics</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Sr Consultant</fullName>
            </value>
            <value>
                <fullName>Young Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>